# astrix

./: .env  .gitignore  Cargo.toml  README.md
data/: ppmxl_original.sql  test.csv
docker/: Dockerfile  docker-compose.yml
docs/: quearies.sql
migrations/: 0001_initial-tables.sql  0002_alter-tables.sql
notebooks/: plots_polars.ipynb  tests.ipynb
src/: cli.rs  lib.rs  main.rs
src/gaia/: db.rs  fov.rs  gaia_reader.rs  mod.rs  reader.rs  star.rs  star_pair.rs  tile_strategy.rs  trig.rs
study/: arrays.ipynb  tests.ipynb
tests/: test_cli.rs  test_math.rs  test_postgress.rs  test_records.rs
