[package]
name = "astrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
csv = "1.2.1"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
nalgebra = "0.32"
tracing = "0.1.37"
tracing-log = "0.1"
tracing-subscriber = "0.3.17"

[dev-dependencies]
predicates = "3.0"
assert_cmd = "2.0.11"

[profile.release]
strip = true  #Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
